--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+    <ul>
+        <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
+        <li><a href="recipes/alaska-salmon.html" target="_blank">Alaska Salmon Bake with Pecan Crunch</a></li>
+        <li><a href="recipes/beef-wellington.html" target="_blank">Beef Wellington</a></li>
+    </ul>
 </body>
 </html>
